--- a/example.html
+++ b/example.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Alcohol Awareness</title>
 </head>
 <body>
 
+<h2>Submit Button </h2>
+<form action="/action_page.php">
+  Height: <br>
+  <input type="text" name="height" value = "" <br> <br>
+  Weight: <br>
+  <input type="text" name="weight" value = "" <br>
+  <br>
+  <input type="submit" value = "Submit">
+
+  
+
+
+</form>
+
+
+
+<!--
 <h1>This is a Heading</h1>
 <form>
   Height:<br>
@@ -13,7 +30,7 @@
   <input type="text" name="weight"><br>
 
 
-<p>This is a paragraph.</p>
+<p>This is a paragraph.</p> -->
 
 <!-- weight = int(input("Enter your weight: "))
   height = int(input("Enter your height (in inches): ")) -->
